fix: update documentation link to point to the latest version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["TwiML Rust Contributors"]
 license = "MIT"
 description = "TwiML (Twilio Markup Language) library for generating Voice, Messaging, and Fax XML responses"
 repository = "https://github.com/Roshan0412/twiml-rust"
-documentation = "https://docs.rs/twiml-rust"
+documentation = "https://docs.rs/twiml-rust/latest/twiml_rust/"
 readme = "README.md"
 keywords = ["twiml", "xml", "voice", "messaging", "telephony"]
 categories = ["api-bindings", "web-programming", "encoding"]
